move icons to alt

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -101,103 +101,105 @@ spowlo:
 
 streetmeasure:
   - de.westnordost.streetmeasure/de.westnordost.streetmeasure.MeasureActivity
-  
+
+streetmeasure_alt_1: {}
+
 adaptive_icon_playground:
   - uk.co.nickbutcher.adaptiveiconplayground/uk.co.nickbutcher.adaptiveiconplayground.MainActivity
-  
+
 adaptivepack:
   - com.actionlauncher.adaptiveiconpack/com.actionlauncher.adaptiveiconpack.ui.EntryActivity
-  
+
 adventure_game_studio:
   - uk.co.adventuregamestudio.agsplayer/uk.co.adventuregamestudio.agsplayer.MainActivity
-  
+
 aerofoil:
   - org.thecodedeposit.aerofoil/org.thecodedeposit.aerofoil.GpActivity
-  
+
 afreerdp:
   - com.freerdp.afreerdp/com.freerdp.freerdpcore.presentation.HomeActivity
-  
+
 aleph_one:
   - com.marathon.alephone/com.marathon.alephone.MainActivity
-  
+
 androbd:
   - com.fr3ts0n.ecu.gui.androbd/com.fr3ts0n.ecu.gui.androbd.MainActivity
-  
+
 anuto_td:
   - ch.logixisland.anuto/ch.logixisland.anuto.view.game.GameActivity
-  
+
 arcticons_you_alt_1: {}
-  
+
 blockinger:
   - org.blockinger.game/org.blockinger.game.activities.MainActivity
-  
+
 brogue:
   - org.brogue.brogue/org.brogue.brogue.brogueActivity
-  
+
 clone_hero:
   - com.srylain.CloneHero/com.unity3d.player.UnityPlayerActivity
-  
+
 gish:
   - ru.exlmoto.gish/ru.exlmoto.gish.GishLauncherActivity
-  
+
 google_icons:
   - amirz.googleicons/amirz.googleicons.MainActivity
-  
+
 icq:
   - com.icq.mobile.client/ru.mail.instantmessenger.flat.main.MainActivity
-  
+
 lineageos_icons:
   - wstxda.lineageicons/wstxda.lineageicons.MainActivity
-  
+
 marathon:
   - com.alephone.marathon/com.marathon.alephone.MainActivity
-  
+
 marathon_2:
   - com.alephone.marathon2/com.marathon.alephone.MainActivity
-  
+
 marathon_infinity:
   - com.alephone.marathoninfinity/com.marathon.alephone.MainActivity
-  
+
 mini_td_2:
   - net.argongames.minitd2/com.unity3d.player.UnityPlayerActivity
-  
+
 omw:
   - is.xyz.omw/ui.activity.MainActivity
   - is.xyz.omw_nightly/ui.activity.MainActivity
-  
+
 openarena:
   - ws.openarena.sdl/ws.openarena.sdl.MainActivity
-  
+
 openmw:
   - com.libopenmw.openmw/ui.activity.MainActivity
-  
+
 pixel_filter:
   - screen.dimmer.pixelfilter/screen.dimmer.pixelfilter.MainActivity
-  
+
 ready_for_reddit:
   - com.devgary.ready/com.devgary.ready.application.ReadyApplication
-  
+
 reddplanet:
   - com.reddplanet/com.reddplanet.MainActivity
-  
+
 serious_sam:
   - com.github.aarcangeli.serioussamandroid/com.github.aarcangeli.serioussamandroid.MainActivity
-  
+
 simplit:
   - com.edzondm.simplit/com.edzondm.simplit.MainActivity
-  
+
 todo_agenda:
   - org.andstatus.todoagenda/org.andstatus.todoagenda.MainActivity
-  
+
 togozip:
   - de.k3b.android.toGoZip/de.k3b.android.toGoZip.SettingsActivity
-  
+
 vtube_studio:
   - com.denchi.vtubestudio/com.unity3d.player.UnityPlayerActivity
-  
+
 zombies_run:
   - com.sixtostart.zombiesrunclient/com.sixtostart.zombiesrunclient.ZombiesRunMainActivity
   - com.sixtostart.zombiesrun/com.sixtostart.zombiesrun2.ZombiesRunMainActivity
-  
+
 rondo:
   - com.benx9.cactus/com.benx9.cactus.MainActivity
