--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -11,3 +11,15 @@
 
 back_market:
   - com.backmarket/com.backmarket.Launcher
+
+agoradesk:
+  - com.agoradesk.app/io.flutter.embedding.android.FlutterFragmentActivity
+
+bimba:
+  - xyz.apiote.bimba.czwek/xyz.apiote.bimba.czwek.onboarding.FirstRunActivity
+
+liftoff:
+  - com.liftoffapp.liftoff/com.liftoffapp.liftoff.MainActivity
+
+shosetsu:
+  - app.shosetsu.android.fdroid/app.shosetsu.android.activity.MainActivity
