--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -23,3 +23,9 @@ liftoff:
 
 shosetsu:
   - app.shosetsu.android.fdroid/app.shosetsu.android.activity.MainActivity
+
+dirol_reader:
+  - com.therxmv.dirolreader/com.therxmv.dirolreader.ui.MainActivity
+
+traewelldroid:
+  - de.hbch.traewelling/de.hbch.traewelling.ui.launcher.LauncherActivity
