--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -29,3 +29,42 @@ dirol_reader:
 
 traewelldroid:
   - de.hbch.traewelling/de.hbch.traewelling.ui.launcher.LauncherActivity
+
+codeassist:
+  - com.tyron.code/com.tyron.code.MainActivity
+
+easter_eggs:
+  - com.dede.android_eggs/com.dede.android_eggs.main.EasterEggsActivity
+
+iosxpc_wallpapers:
+  - com.iosxpc.wallpapers/com.iosxpc.wallpapers.MainActivity
+
+lemming:
+  - de.janniskilian.lemming/de.janniskilian.lemming.MainActivity
+
+net_monitor:
+  - com.dede.nativetools/com.dede.nativetools.main.MainActivity
+
+nextdns_manager:
+  - com.doubleangels.nextdnsmanagement/com.doubleangels.nextdnsmanagement.MainActivity
+
+octogram:
+  - it.octogram.android/org.telegram.messenger.DefaultIcon
+
+photo_editor_foss:
+  - com.burhanrashid52.photoediting/com.burhanrashid52.photoediting.EditImageActivity
+
+tempo:
+  - com.cappielloantonio.tempo/com.cappielloantonio.tempo.ui.activity.MainActivity
+
+text_tools_pro:
+  - com.dingleinc.texttoolspro/crc64302777824117340f.MainActivity
+
+yearly_progress:
+  - com.a3.yearlyprogess/com.a3.yearlyprogess.MainActivity
+
+you_tune:
+  - app.suhasdissa.karaoke/app.suhasdissa.karaoke.ui.MainActivity
+
+zassest_booker:
+  - com.zucchetti.hr.zworkspace/com.zucchetti.hr.zworkspace.MainActivity
