--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -68,3 +68,12 @@ you_tune:
 
 zassest_booker:
   - com.zucchetti.hr.zworkspace/com.zucchetti.hr.zworkspace.MainActivity
+
+viper:
+  - com.aam.viper4android/com.aam.viper4android.MainActivity
+
+music:
+  - org.calyxos.eleven/org.lineageos.eleven.ui.activities.HomeActivity
+
+edenred:
+  - com.edenred.mobiletr/com.edenred.mobiletr.activity.MainActivity
