--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -60,6 +60,9 @@ tempo:
 text_tools_pro:
   - com.dingleinc.texttoolspro/crc64302777824117340f.MainActivity
 
+threads:
+ - com.instagram.barcelona/com.instagram.barcelona.mainactivity.BarcelonaActivity
+
 yearly_progress:
   - com.a3.yearlyprogess/com.a3.yearlyprogess.MainActivity
 
