--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -80,3 +80,9 @@ music:
 
 edenred:
   - com.edenred.mobiletr/com.edenred.mobiletr.activity.MainActivity
+
+bluetooth_volume_manager:
+  - eu.darken.bluemusic/eu.darken.bluemusic.main.ui.MainActivity
+
+mmrl:
+  - com.dergoogler.mmrl/com.dergoogler.mmrl.MainActivity
