new 13 icons, 3 compinfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -86,3 +86,52 @@ bluetooth_volume_manager:
 
 mmrl:
   - com.dergoogler.mmrl/com.dergoogler.mmrl.MainActivity
+
+markor:
+  - net.gsantner.markor/net.gsantner.markor.activity.MainActivity
+
+car_parking_multiplayer:
+  - com.olzhas.carparking.multyplayer/com.google.firebase.MessagingUnityPlayerActivity
+
+radio_de:
+  - de.radio.android.prime/de.radio.android.ui.AppActivity
+
+star_realms:
+  - com.starrealms.starrealmsapp/com.google.firebase.MessagingUnityPlayerActivity
+
+mts_music:
+  - ru.mts.music.android/ru.mts.music.ui.SplashActivity
+
+starline:
+  - ru.starlinex.app/ru.starlinex.app.feature.device.DeviceFeatureActivity
+
+fts_russia:
+  - com.gnivts.selfemployed/com.crpt.samoz.samozan.new_arch.MainActivity
+
+mavt:
+  - ru.mavt.app/ru.mavt.app.MainActivity
+
+bistrodengi:
+  - ru.bistrodengi.my/ru.bistrodengi.app.MainActivity
+
+gvb:
+  - nl.gvb.reizigersapp/nl.gvb.reizigersapp.MainActivity
+
+altex:
+  - ro.altex.mobile/ro.altex.mobile.MainActivity
+
+autodoc:
+  - de.autodoc.gmbh/de.autodoc.gmbh.ui.activity.SplashActivity
+
+ameriprise_financial:
+  - com.ameriprise.AmeripriseFinancial/com.ameriprise.ameriprisefinancial.ui.common.SplashActivity
+
+highway_radar:
+  - com.highwayradar.app/com.highwayradar.app.ui.main_activity.MainActivity
+
+red_cross:
+  - au.com.donateblood.donorapp.prod/au.com.donateblood.donorapp.MainActivity
+
+canary_mail:
+  - io.canarymail.android/io.canarymail.android.dark
+  - io.canarymail.android/io.canarymail.android.light
