--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,15 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+harmony_music:
+  - com.anandnet.harmonymusic/com.ryanheise.audioservice.AudioServiceActivity
+
+mastodonredirect:
+  - dev.zwander.mastodonredirect/dev.zwander.mastodonredirect.MainActivity
+
+song_sync:
+  - pl.lambada.songsync/pl.lambada.songsync.MainActivity
+
+symphonica:
+  - org.akanework.symphonica/org.akanework.symphonica.MainActivity
