--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -20,3 +20,12 @@ song_sync:
 
 symphonica:
   - org.akanework.symphonica/org.akanework.symphonica.MainActivity
+
+asiacell:
+  - com.asiacell.asiacellodp/com.asiacell.asiacellodp.views.LauncherActivity
+
+oodi:
+  - iq.oodi.com/iq.oodi.com.SplashActivity
+
+orderii:
+  - com.flutter.orderii_mobile_app/com.flutter.orderii_mobile_app.MainActivity
