--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -29,3 +29,12 @@ oodi:
 
 orderii:
   - com.flutter.orderii_mobile_app/com.flutter.orderii_mobile_app.MainActivity
+
+animity:
+  - com.kl3jvi.animity/com.kl3jvi.animity.ui.activities.login.LoginActivity
+
+divolt:
+  - divolt.app.twa/chat.revolt.app.twa.LauncherActivity
+
+geddit:
+  - geddit.buzl.uk/geddit.buzl.uk.MainActivity
