--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -38,3 +38,21 @@ divolt:
 
 geddit:
   - geddit.buzl.uk/geddit.buzl.uk.MainActivity
+
+alga:
+  - tech.laihz.alga.arm64/tech.laihz.alga.MainActivity
+
+nonocross:
+  - com.picross.nonocross/com.picross.nonocross.MainActivity
+
+pineapple:
+  - com.pineapple.app/com.pineapple.app.MainActivity
+
+rvmob:
+  - site.endl.taiku.rvmob/site.endl.taiku.rvmob.MainActivity
+
+squawker:
+  - org.ca.squawker/org.ca.squawker.MainActivity
+
+zerotier_fix:
+  - net.kaaass.zerotierfix/net.kaaass.zerotierfix.ui.NetworkListActivity
