--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -56,3 +56,6 @@ squawker:
 
 zerotier_fix:
   - net.kaaass.zerotierfix/net.kaaass.zerotierfix.ui.NetworkListActivity
+
+gloom:
+  - com.materiiapps.gloom/com.materiiapps.gloom.ui.GloomActivity
