18 new icons, 6 compinfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -59,3 +59,75 @@ zerotier_fix:
 
 gloom:
   - com.materiiapps.gloom/com.materiiapps.gloom.ui.GloomActivity
+
+pavlok:
+  - com.pavlok3.core/com.pavlok3.core.MainActivity
+
+mimo:
+  - com.getmimo/com.getmimo.ui.SplashActivity_default
+
+nextcloud_deck:
+  - it.niedermann.nextcloud.deck.play/it.niedermann.nextcloud.deck.ui.main.MainActivity
+
+freestyle_librelink:
+  - com.freestylelibre.app.gb/com.librelink.app.ui.SplashActivity
+
+hbo_max:
+  - com.wbd.stream/com.wbd.stream.MainActivity
+
+hik_connect:
+  - com.connect.enduser/com.hikvision.hikconnect.login.LoadingActivity
+
+megogo:
+  - com.megogo.application/net.megogo.app.MainActivity
+
+infinity_army:
+  - com.infinityarmy/com.infinityarmy.MainActivity
+
+ip_tools:
+  - com.ddm.iptools/com.ddm.iptools.ui.MainActivity
+
+magic_8_ball:
+  - me.yasan.magic_8_ball/me.yasan.magic_8_ball.activity.MainActivity
+
+privy:
+  - com.privygate.privyid/id.privy.android.ui.splash.SplashActivity
+
+pixel_brush:
+  - com.jaween.paint/com.jaween.paint.MainActivity
+
+joyride:
+  - com.joyride.rider/com.joyride.rider.MainActivity
+
+promsvyazbank:
+  - logo.com.mbanking/psb.com.mbanking.feature.preloader.PreLoaderActivity
+
+autovokzaly:
+  - ru.avtovokzaly.buses/ru.avtovokzaly.buses.ui.splash.LaunchActivity
+
+kyash:
+  - co.kyash/co.kyash.ui.splash.SplashActivity
+
+marshall:
+  - com.zoundindustries.marshallbt/com.zoundindustries.marshallbt.ui.devicesettings.DeviceSettingsActivity
+
+teufel_raumfeld:
+  - com.raumfeld.android.controller/com.raumfeld.android.controller.clean.external.ui.root.RootActivity
+
+teufel_holist:
+  - com.wifiaudio.Teufel/com.wifiaudio.app.SplashActivity
+
+apex_pro:
+  - com.apex.plus/com.apex.plus.MainActivity
+
+efood:
+  - com.venturegeeks.efood/gr.onlinedelivery.com.clickdelivery.presentation.ui.splash.SplashActivity
+
+soundid:
+  - com.sonarworks.soundid.mobile/com.sonarworks.soundid.mobile.SoundIdActivity
+
+dlf_audiothek:
+  - de.deutschlandfunk.dlfaudiothek/de.deutschlandradio.app.MainActivity
+
+mercedes:
+  - com.daimler.ris.mercedesme.ece.android/com.daimler.mycar.screen.splash.SplashActivity
