add icons and some fixes

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,12 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+beautyxt:
+  - dev.soupslurpr.beautyxt/dev.soupslurpr.beautyxt.MainActivity
+
+cromite:
+  - org.cromite.cromite/com.google.android.apps.chrome.Main
+
+filemanagersphere:
+  - com.etb.filemanager/com.etb.filemanager.activity.MainActivity
