--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -17,3 +17,9 @@ cromite:
 
 filemanagersphere:
   - com.etb.filemanager/com.etb.filemanager.activity.MainActivity
+
+cube_escape_collection:
+  - air.com.RustyLake.CubeEscapeCollection/air.com.RustyLake.CubeEscapeCollection.AIRAppEntry
+
+empty:
+  - com.dustyroom.Empty/com.unity3d.player.UnityPlayerActivity
