--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -23,3 +23,12 @@ cube_escape_collection:
 
 empty:
   - com.dustyroom.Empty/com.unity3d.player.UnityPlayerActivity
+
+orange_money:
+ - com.orange.eg.money/com.orange.eg.money.view.activities.SplashActivity
+
+pdb:
+ - pdb.app/pdb.app.LauncherActivity
+
+instapay:
+ - com.egyptianbanks.instapay/com.olive.insta_pay.activity.SplashActivity
