Add Avenza Maps

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -32,3 +32,6 @@ pdb:
 
 instapay:
  - com.egyptianbanks.instapay/com.olive.insta_pay.activity.SplashActivity
+
+avenza_maps:
+  - com.Avenza/com.avenza.rootview.SplashActivity
