--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -35,3 +35,7 @@ instapay:
 
 avenza_maps:
   - com.Avenza/com.avenza.rootview.SplashActivity
+
+guarda:
+  - com.crypto.multiwallet/com.crypto.multiwallet.MainActivity
+
