Add 3 icons, updated 1 component
Icons: Nabla TypeMath, Divide, SaverTuner

Components: Flightradar24

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -25,10 +25,24 @@ empty:
   - com.dustyroom.Empty/com.unity3d.player.UnityPlayerActivity
 
 orange_money:
- - com.orange.eg.money/com.orange.eg.money.view.activities.SplashActivity
+  - com.orange.eg.money/com.orange.eg.money.view.activities.SplashActivity
 
 pdb:
- - pdb.app/pdb.app.LauncherActivity
+  - pdb.app/pdb.app.LauncherActivity
 
 instapay:
- - com.egyptianbanks.instapay/com.olive.insta_pay.activity.SplashActivity
+  - com.egyptianbanks.instapay/com.olive.insta_pay.activity.SplashActivity
+
+nabla_typemath:
+  - com.ph.nabla_typemath/com.ph.nabla_typemath.MainActivity
+
+divide:
+  - com.waken.Divide/com.nifcloud.mbaas.ncmbfcmplugin.UnityPlayerProxyActivity
+
+savertuner:
+  - s1m.savertuner/com.draco.buoy.views.MainActivity
+
+flightradar24:
+  - com.flightradar24free/com.flightradar24free.SplashActivity
+  - com.flightradar24free/com.flightradar24free.feature.splash.SplashActivity
+  - com.flightradar24free/com.flightradar24free.feature.splash.view.SplashActivity
