--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -46,3 +46,6 @@ flightradar24:
   - com.flightradar24free/com.flightradar24free.SplashActivity
   - com.flightradar24free/com.flightradar24free.feature.splash.SplashActivity
   - com.flightradar24free/com.flightradar24free.feature.splash.view.SplashActivity
+
+bartbonte_orange:
+  - air.com.bartbonte.orange/air.com.bartbonte.orange.AIRAppEntry
