Adding two new icons and updating one (#659)
* Add Avenza Maps

* Add Guarda

* Update alignment and kerning of Tripcom logo

I must have been drunk the first time I created it

* Remove Avenza Request

---------

Co-authored-by: Luke Wong <luke@hausofwong.com>

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -32,3 +32,10 @@ pdb:
 
 instapay:
  - com.egyptianbanks.instapay/com.olive.insta_pay.activity.SplashActivity
+
+avenza_maps:
+  - com.Avenza/com.avenza.rootview.SplashActivity
+
+guarda:
+  - com.crypto.multiwallet/com.crypto.multiwallet.MainActivity
+
