2 new icons, 1 compinfo, misc fixes

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -55,3 +55,12 @@ avenza_maps:
 
 guarda:
   - com.crypto.multiwallet/com.crypto.multiwallet.MainActivity
+
+pokemon_sleep:
+  - jp.pokemon.pokemonsleep/jp.pokemon.pokemonsleep.commonutility.UnityPlayerActivity
+
+20_minutes_till_dawn:
+  - com.Flanne.MinutesTillDawn.roguelike.shooting.gp/com.unity3d.player.UnityPlayerActivity
+
+alliant:
+  - org.alliant.mobile/crc649274b848828b2351.MainActivity
