--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -59,7 +59,7 @@ guarda:
 pokemon_sleep:
   - jp.pokemon.pokemonsleep/jp.pokemon.pokemonsleep.commonutility.UnityPlayerActivity
 
-20_minutes_till_dawn:
+_20_minutes_till_dawn:
   - com.Flanne.MinutesTillDawn.roguelike.shooting.gp/com.unity3d.player.UnityPlayerActivity
 
 alliant:
