--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -64,3 +64,18 @@ _20_minutes_till_dawn:
 
 alliant:
   - org.alliant.mobile/crc649274b848828b2351.MainActivity
+
+claw:
+  - dev.msfjarvis.claw.android/dev.msfjarvis.claw.android.MainActivity
+
+memerize:
+  - app.suhasdissa.memerize/app.suhasdissa.memerize.MainActivity
+
+metronome:
+  - de.moekadu.metronome/de.moekadu.metronome.MainActivity
+
+notify:
+  - com.aritra.notify/com.aritra.notify.ui.screens.MainActivity
+
+simpmusic:
+  - com.maxrave.simpmusic/com.maxrave.simpmusic.ui.MainActivity
