--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -79,3 +79,6 @@ notify:
 
 simpmusic:
   - com.maxrave.simpmusic/com.maxrave.simpmusic.ui.MainActivity
+
+ytdlnis:
+  - com.deniscerri.ytdl/com.deniscerri.ytdlnis.Default
