--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -82,3 +82,13 @@ simpmusic:
 
 ytdlnis:
   - com.deniscerri.ytdl/com.deniscerri.ytdlnis.Default
+
+dubizzle:
+ - com.olxmena.horizontal/com.empg.olxeg.MainActivity
+ - com.dubizzle.horizontal/com.dubizzle.horizontal.activities.SplashScreenActivity
+
+rgb_color_wallpaper:
+ - com.tecdrop.rgbwallpaper/com.tecdrop.rgbwallpaper.RGBColorActivity
+
+swisscows:
+ - com.swisscows.search/com.swisscows.search.MainActivity
