--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,12 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+infinity_for_lemmy:
+  - eu.toldi.infinityforlemmy/eu.toldi.infinityforlemmy.activities.MainActivity
+
+sync_for_lemmy:
+  - io.syncapps.lemmy_sync/io.syncapps.lemmy_sync.ui.activities.HomeActivity.Default
+
+upnext_gpt:
+  - com.dokar.upnextgpt/com.dokar.upnextgpt.MainActivity
