--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -17,3 +17,6 @@ sync_for_lemmy:
 
 upnext_gpt:
   - com.dokar.upnextgpt/com.dokar.upnextgpt.MainActivity
+
+shortwave:
+  - com.shortwave.android/shortwave.android.ui.MainActivity
