--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -20,3 +20,6 @@ upnext_gpt:
 
 shortwave:
   - com.shortwave.android/shortwave.android.ui.MainActivity
+
+rutracker_flow:
+  - me.rutrackersearch.app/me.rutrackersearch.app.MainActivity
