--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -21,5 +21,7 @@ upnext_gpt:
 shortwave:
   - com.shortwave.android/shortwave.android.ui.MainActivity
 
-rutracker_flow:
+flow:
   - me.rutrackersearch.app/me.rutrackersearch.app.MainActivity
+
+flow_alt: {}
