--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -25,3 +25,6 @@ flow:
   - me.rutrackersearch.app/me.rutrackersearch.app.MainActivity
 
 flow_alt: {}
+
+hd_videobox:
+  - dkc.video.hdbox/com.dkc.fs.ui.activities.SplashActivity
