--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -24,7 +24,7 @@ shortwave:
 flow:
   - me.rutrackersearch.app/me.rutrackersearch.app.MainActivity
 
-flow_alt: {}
+flow_alt_1: {}
 
 hd_videobox:
   - dkc.video.hdbox/com.dkc.fs.ui.activities.SplashActivity
