Added HD Videobox and Flow icons (#663)
* Added Flow

* Delete rutracker_flow.png

* Delete rutracker_flow.svg

* Added Flow

* Update new_icons.yaml

* Delete rutracker_flow.png

* Delete rutracker_flow.svg

* Added Flow

* Update new_icons.yaml

* Update appfilter.xml

* Update appfilter.xml

* Added HD Videobox

* Update new_icons.yaml

* Delete hd_videobox.png

* Delete hd_videobox.svg

* Added HD Videobox

* Add files via upload

* Add files via upload

* Add files via upload

* Add files via upload

* Add files via upload

* Update new_icons.yaml

* Delete flow_alt.png

* Delete flow_alt.svg

* Add files via upload

* Update contributors.xml

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -20,3 +20,11 @@ upnext_gpt:
 
 shortwave:
   - com.shortwave.android/shortwave.android.ui.MainActivity
+
+flow:
+  - me.rutrackersearch.app/me.rutrackersearch.app.MainActivity
+
+flow_alt_1: {}
+
+hd_videobox:
+  - dkc.video.hdbox/com.dkc.fs.ui.activities.SplashActivity
