6 new icons, 1 compinfo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -28,3 +28,24 @@ flow_alt_1: {}
 
 hd_videobox:
   - dkc.video.hdbox/com.dkc.fs.ui.activities.SplashActivity
+
+chatgpt:
+  - com.openai.chatgpt/com.openai.chatgpt.MainActivity
+
+mosmetro_wifi:
+  - pw.thedrhax.mosmetro/pw.thedrhax.mosmetro.activities.SettingsActivity
+
+zalopay:
+  - vn.com.vng.zalopay/vn.com.vng.zalopay.ui.activity.SplashScreenActivity
+
+buyee:
+  - jp.buyee/jp.buyee.MainActivity
+
+liveuamap:
+  - com.altwork.liveuamap/com.altwork.liveuamap.MainActivity
+
+dominos:
+  - zena.dominos/zena.dominos.MainActivity
+
+petsmart:
+  - com.petsmart.consumermobile/com.pk.ui.activity.AppEntryActivity
