--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -49,3 +49,68 @@ dominos:
 
 petsmart:
   - com.petsmart.consumermobile/com.pk.ui.activity.AppEntryActivity
+
+_5_in_1:
+  - uk.co.thefivey/com.t2s.MainActivity
+
+foxie_kwgt:
+  - foxieforkwgt.kustom.pack/foxieforkwgt.kustom.pack.MainActivity
+
+greggs:
+  - com.mobile5.greggs/com.greggs.customerApp.MainActivity
+  - com.mobile5.greggs/com.mobile5.greggs.section.splash.SplashActivity
+
+experian_credit:
+  - net.intellectsoft.experian/uk.co.experian.androidapp.SplashActivity
+
+my_ee:
+  - uk.co.ee.myee/uk.co.ee.myee.Launcher
+  - uk.co.ee.myee/com.example.myee_app.MainActivity
+
+moneysupermarket:
+  - com.moneysupermarket.phoenix/com.moneysupermarket.phoenix.SplashActivity
+
+smudgess:
+  - com.gng.smudgess/com.amaan.app.features.MainActivity
+
+myaviva:
+  - co.uk.aviva.myavivaapp/co.uk.myaviva.splashscreen
+
+wayfair:
+  - com.wayfair.wayfair/com.wayfair.mainactivity.MainActivity
+
+wallique:
+  - dev.introdructor.wallique.app/dev.introdructor.wallique.app.MainActivity
+
+wallberry:
+  - com.raj_arya.wallberry/com.raj_arya.wallberry.MainActivity
+
+netbenefits:
+  - com.fidelity.wi.activity/com.fidelity.wi.activity.MainActivity
+
+nothingbutwalls:
+  - com.dev.nothingbutwalls.app/com.dev.nothingbutwalls.app.MainActivity
+
+nova_dark:
+  - cs14.pixelperfect.iconpack.novadark/com.candybar.dev.activities.SplashActivity
+
+nutracheck:
+  - com.nutratech.app.android/com.nutratech.android.activities.MainActivity
+
+sheer_kwgt:
+  - sheerkwgt.kustom.pack/sheerkwgt.kustom.pack.MainActivity
+
+sky_bet:
+  - com.skybet.app.skybet/com.skybet.app.skybet.ui.MainActivity
+
+flashlight_tiramisu:
+  - com.pdb82.flashlighttiramisu/com.pdb82.flashlighttiramisu.MainActivity
+
+end:
+  - com.endclothing.endroid/com.endclothing.endroid.activities.splash.SplashScreen
+
+orca_kwgt:
+  - orcaforkwgt.kustom.pack/orcaforkwgt.kustom.pack.MainActivity
+
+alarm_clock_extreme:
+  - com.bzzzapp/com.bzzzapp.ux.MainActivity
