--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,11 @@
 #
 # new_icon_2_alt_1: {}
 #
+english_online:
+ - org.britishcouncil.englishonline/org.britishcouncil.englishonline.MainActivity
+
+englishscore:
+ - com.englishscore/com.englishscore.MainActivity
+
+tomb_of_the_mask_color:
+ - com.playgendary.tombpaint/com.lllibset.LLActivity.LLActivity
