add icons, 1 compinfo, 1 updated

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -16,3 +16,24 @@ englishscore:
 
 tomb_of_the_mask_color:
  - com.playgendary.tombpaint/com.lllibset.LLActivity.LLActivity
+
+alibi:
+  - app.myzel394.alibi/app.myzel394.alibi.MainActivity
+
+daily_you:
+  - com.demizo.daily_you/com.demizo.daily_you.MainActivity
+
+open_chaos_chess:
+  - dev.corruptedark.openchaoschess/dev.corruptedark.openchaoschess.MainActivity
+
+primal:
+  - net.primal.android/net.primal.android.MainActivity
+
+tv_randshow:
+  - deandrea.matias.tv_randshow/deandrea.matias.tv_randshow.MainActivity
+
+voyager_for_lemmy:
+  - app.vger.voyager/app.vger.voyager.MainActivity
+
+mastodonredirect:
+  - dev.zwander.lemmyredirect/dev.zwander.lemmyredirect.MainActivity
