--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -37,3 +37,39 @@ voyager_for_lemmy:
 
 mastodonredirect:
   - dev.zwander.lemmyredirect/dev.zwander.lemmyredirect.MainActivity
+
+wink_rt:
+  - ru.rt.video.app.mobile/ru.rt.video.app.splash.SplashActivity
+
+magnit:
+  - ru.tander.magnit/ru.tander.magnit.presentation.MainActivity
+
+kick:
+  - com.kick.mobile/com.kick.mobile.MainActivity
+
+pixel_car_racer:
+  - com.StudioFurukawa.PixelCarRacer/com.StudioFurukawa.PixelCarRacer.RunnerActivity
+
+rumble:
+  - com.rumble.battles/com.rumble.battles.landing.LandingActivity
+
+magister:
+  - nl.schoolmaster.magister.mobile/crc64bb28a63fa9856b6c.SplashActivity
+
+territorial_io:
+  - territorial.io/com.example.territorialio.MainActivity
+
+character_ai:
+  - ai.character.app/ai.character.app.MainActivity
+
+brevent:
+  - me.piebridge.brevent/me.piebridge.brevent.ui.BreventActivity
+
+skroutz:
+  - com.niobiumlabs.android.apps.skroutz/gr.skroutz.ui.startup.StartupActivity
+
+postnl:
+  - nl.tpp.mobile.android/nl.postnl.app.splash.SplashActivity
+
+dstv_stream:
+  - com.dstvmobile.android/com.dstv.now.android.ui.splash.SplashActivity
