--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -73,3 +73,15 @@ postnl:
 
 dstv_stream:
   - com.dstvmobile.android/com.dstv.now.android.ui.splash.SplashActivity
+
+samsung_keys_cafe:
+ - com.samsung.android.keyscafe/com.sasmung.android.keyscafe.main.ui.KeysCafeSplashActivity
+
+letters_icon_pack:
+ - com.tanujnotes.leiconpack/com.tanujnotes.leiconpack.MainActivity
+
+ultraflow:
+ - com.DSS.ULTRAFLOW/com.unity3d.player.UnityPlayerNativeActivity
+
+ultraflow_2:
+ - com.ULTRATEAM.ULTRAFLOW2/com.unity3d.player.UnityPlayerActivity
