new 11 icons, 3 compinfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -75,13 +75,55 @@ dstv_stream:
   - com.dstvmobile.android/com.dstv.now.android.ui.splash.SplashActivity
 
 samsung_keys_cafe:
- - com.samsung.android.keyscafe/com.sasmung.android.keyscafe.main.ui.KeysCafeSplashActivity
+  - com.samsung.android.keyscafe/com.sasmung.android.keyscafe.main.ui.KeysCafeSplashActivity
 
 letters_icon_pack:
- - com.tanujnotes.leiconpack/com.tanujnotes.leiconpack.MainActivity
+  - com.tanujnotes.leiconpack/com.tanujnotes.leiconpack.MainActivity
 
 ultraflow:
- - com.DSS.ULTRAFLOW/com.unity3d.player.UnityPlayerNativeActivity
+  - com.DSS.ULTRAFLOW/com.unity3d.player.UnityPlayerNativeActivity
 
 ultraflow_2:
- - com.ULTRATEAM.ULTRAFLOW2/com.unity3d.player.UnityPlayerActivity
+  - com.ULTRATEAM.ULTRAFLOW2/com.unity3d.player.UnityPlayerActivity
+
+comixology:
+  - com.iconology.comics/com.amazon.kindle.ThirdPartyUpgradePage
+
+calibre_cloud:
+  - com.trucnguyen.calibresync/com.trucnguyen.calibresync.MainActivity
+
+sbi:
+  - com.sbi.upi/com.sbi.upi.customerMode.modules.initial.splash.SplashActivity
+
+sync_com:
+  - com.sync.mobileapp/com.sync.mobileapp.activities.SplashActivity
+
+comicdays:
+  - jp.co.kodansha.comicdays/com.goodpatch.comicdays.presentation.launch.view.LaunchActivity
+
+keepa:
+  - com.keepa.mobile/com.tns.NativeScriptActivity
+
+atlassian_confluence:
+  - com.atlassian.android.confluence.core/com.atlassian.android.confluence.core.ui.launcher.LauncherActivity
+
+atlassian_confluence_server:
+  - com.atlassian.confluence.server/com.atlassian.android.confluence.core.ui.launcher.LauncherActivity
+
+atlassian_opsgenie:
+  - com.ifountain.opsgenie/com.ifountain.opsgenie.ui.screens.splash.SplashActivity
+
+atlassian_jira:
+  - com.atlassian.android.jira.core/com.atlassian.android.jira.core.app.LauncherActivity
+
+atlassian_jira_server:
+  - com.atlassian.jira.server/com.atlassian.android.jira.core.app.LauncherActivity
+
+marindeck:
+  - online.hisubway.marindeck/io.kodular.shenyusoftware.MarinDeck.Screen1
+
+mada_pay:
+  - com.mada.madapay/com.emcrey.app.activities.SupportActivity
+
+vestiaire:
+  - fr.vestiairecollective/fr.vestiairecollective.legacy.activity.SplashActivity
