--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -23,3 +23,9 @@ vk_x:
 wolfram_alpha:
   - com.wolfram.android.alpha/com.wolfram.android.alphalibrary.activity.WolframAlphaActivity
   - com.wolfram.android.alphapro/com.wolfram.android.alphapro.activity.ProUserOnBoardingActivity
+
+day_one:
+ - com.dayoneapp.dayone/com.dayoneapp.dayone.main.SplashActivity
+
+flow_launcher:
+ - com.app.flowlauncher/com.app.flowlauncher.homeScreen.HomeActivity
