Add Sync for Lemmy ComponentInfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -23,3 +23,6 @@ vk_x:
 wolfram_alpha:
   - com.wolfram.android.alpha/com.wolfram.android.alphalibrary.activity.WolframAlphaActivity
   - com.wolfram.android.alphapro/com.wolfram.android.alphapro.activity.ProUserOnBoardingActivity
+
+sync:
+  - io.syncapps.lemmy_sync/io.syncapps.lemmy_sync.ui.activities.HomeActivity.Default
