Added 2 Icons, Fixed 1 ComponentInfo (#668)
* Update appfilter.xml

* Update appfilter.xml

* Update new_icons.yaml

* Update requests.txt

* Add files via upload

---------

Co-authored-by: Evgeny <mail@hexed.pw>

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -24,5 +24,11 @@ wolfram_alpha:
   - com.wolfram.android.alpha/com.wolfram.android.alphalibrary.activity.WolframAlphaActivity
   - com.wolfram.android.alphapro/com.wolfram.android.alphapro.activity.ProUserOnBoardingActivity
 
+day_one:
+  - com.dayoneapp.dayone/com.dayoneapp.dayone.main.SplashActivity
+
+flow_launcher:
+  - com.app.flowlauncher/com.app.flowlauncher.homeScreen.HomeActivity
+
 sync:
   - io.syncapps.lemmy_sync/io.syncapps.lemmy_sync.ui.activities.HomeActivity.Default
