--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -32,3 +32,12 @@ flow_launcher:
 
 sync:
   - io.syncapps.lemmy_sync/io.syncapps.lemmy_sync.ui.activities.HomeActivity.Default
+
+cheburnet:
+  - com.cheburnet.mobile/com.cheburnet.mobile.MainActivity
+
+townscaper:
+  - com.OskarStalberg.Townscaper/com.unity3d.player.UnityPlayerActivity
+
+daikomu:
+  - com.daimokupro.DAIMOKUPRO/com.drec.daimokupro.ui.activity.MainActivity
