--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -41,3 +41,9 @@ townscaper:
 
 daikomu:
   - com.daimokupro.DAIMOKUPRO/com.drec.daimokupro.ui.activity.MainActivity
+
+dream2000:
+ - com.xapps.dream2000/com.dream2000.dream.activities.SplashScreenActivity
+
+logic_code_breaking:
+ - dk.logicom.masterming/dk.logicom.mastermind.MainActivity
