--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -46,4 +46,4 @@ dream2000:
  - com.xapps.dream2000/com.dream2000.dream.activities.SplashScreenActivity
 
 logic_code_breaking:
- - dk.logicom.masterming/dk.logicom.mastermind.MainActivity
+ - dk.logicom.mastermind/dk.logicom.mastermind.MainActivity
