--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -41,3 +41,60 @@ townscaper:
 
 daikomu:
   - com.daimokupro.DAIMOKUPRO/com.drec.daimokupro.ui.activity.MainActivity
+
+aurora_store:
+  - com.aurora.store/com.aurora.store.MainActivity
+
+google_kids_space:
+  - com.google.android.apps.kids.home/com.google.android.apps.kids.home.accountsetup.AccountSignInActivity
+
+jina_drawer:
+  - com.mobeedom.android.jinaFS/com.mobeedom.android.justinstalled.JinaMainActivity
+
+jina_drawer_alt_1: {}
+
+jina_sidebar:
+  - com.mobeedom.android.jinaFS/com.mobeedom.android.justinstalled.SideBarActivity
+
+joiplay_renpy:
+  - cyou.joiplay.renpy/cyou.joiplay.renpy.LauncherActivity
+
+joiplay_rpgmaker:
+  - cyou.joiplay.rpgm/cyou.joiplay.rpgm.LauncherActivity
+
+joiplay_ruffle:
+  - cyou.joiplay.ruffle/cyou.joiplay.ruffle.LauncherActivity
+
+kick:
+  - com.kick.mobile/com.kick.mobile.MainActivity
+  
+kirikiroid2:
+  - org.tvp.kirikiri2/org.tvp.kirikiri2.Kirikiroid2
+  - org.tvp.kirikiri2_free_10309/org.tvp.kirikiri2_free_10309.Kirikiroid2
+
+max_stream:
+  - com.wbd.stream/com.wbd.stream.MainActivity
+
+mini_vmac:
+  - name.osher.gil.minivmac/name.osher.gil.minivmac.MiniVMac
+
+opacha_mda:
+  - yio.tro.opacha/yio.tro.opacha.AndroidLauncher
+
+ruffle:
+  - rs.ruffle/rs.ruffle.MainActivity
+  
+skyemu:
+  - com.sky.SkyEmu/com.sky.SkyEmu.EnhancedNativeActivity
+
+unexpected_keyboard:
+  - juloo.keyboard2/juloo.keyboard2.LauncherActivity
+
+unipcemu:
+  - com.unipcemu.app/com.unipcemu.app.UniPCemuActivity
+
+wakeblock:
+  - com.giovannibozzano.wakeblock/com.giovannibozzano.wakeblock.layout.activities.ActivitySplash
+  
+winlator:
+  - com.winlator/com.winlator.MainActivity
