--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -42,6 +42,12 @@ townscaper:
 daikomu:
   - com.daimokupro.DAIMOKUPRO/com.drec.daimokupro.ui.activity.MainActivity
 
+dream2000:
+  - com.xapps.dream2000/com.dream2000.dream.activities.SplashScreenActivity
+
+logic_code_breaking:
+  - dk.logicom.mastermind/dk.logicom.mastermind.MainActivity
+
 aurora_store:
   - com.aurora.store/com.aurora.store.MainActivity
 
