--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -104,3 +104,6 @@ winlator:
 
 telda:
  - io.telda.app/io.telda.app.ui.SplashActivity
+
+newsblur:
+ - com.newsblur/com.newsblur.activity.InitActivity
