Added Telda and Newsblur (#670)
* Add files via upload

* Update new_icons.yaml

* Update requests.txt

* Add files via upload

* Update new_icons.yaml

* Update requests.txt

---------

Co-authored-by: Evgeny <mail@hexed.pw>

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -99,5 +99,11 @@ wakeblock:
 winlator:
   - com.winlator/com.winlator.MainActivity
 
+telda:
+ - io.telda.app/io.telda.app.ui.SplashActivity
+
+newsblur:
+ - com.newsblur/com.newsblur.activity.InitActivity
+
 discord:
   - com.discord/com.discord.main.MainDefault
