--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -107,3 +107,33 @@ newsblur:
 
 discord:
   - com.discord/com.discord.main.MainDefault
+
+anihyou:
+  - com.axiel7.anihyou/com.axiel7.anihyou.ui.screens.main.MainActivity
+
+apkupdater:
+  - com.apkupdater/com.apkupdater.ui.activity.MainActivity
+
+colors_ai:
+  - is.tsin.colors_ai.colors_ai/is.tsin.colors_ai.colors_ai.MainActivity
+
+freepaint:
+  - io.github.pastthepixels.freepaint/io.github.pastthepixels.freepaint.MainActivity
+
+habo:
+  - com.pavlenko.Habo/com.pavlenko.Habo.MainActivity
+
+logfox:
+  - com.f0x1d.logfox/com.f0x1d.logfox.ui.activity.MainActivity
+
+uci_cinema:
+  - it.creaweb.ucicinemas/it.creaweb.ucicinemas.SplashActivity}
+
+warpshare:
+  - com.moseoridev.warpshare/org.mokee.warpshare.MainActivity
+
+widgeet:
+  - art.widgeet.android/com.leaves.MainActivity
+
+neo_store:
+  - com.machiav3lli.fdroid.neo/com.machiav3lli.fdroid.NeoActivity
