new 4 icons, 1 compinfo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -100,10 +100,10 @@ winlator:
   - com.winlator/com.winlator.MainActivity
 
 telda:
- - io.telda.app/io.telda.app.ui.SplashActivity
+  - io.telda.app/io.telda.app.ui.SplashActivity
 
 newsblur:
- - com.newsblur/com.newsblur.activity.InitActivity
+  - com.newsblur/com.newsblur.activity.InitActivity
 
 discord:
   - com.discord/com.discord.main.MainDefault
@@ -137,3 +137,19 @@ widgeet:
 
 neo_store:
   - com.machiav3lli.fdroid.neo/com.machiav3lli.fdroid.NeoActivity
+
+physics_toolbox_suite:
+  - com.chrystianvieyra.physicstoolboxsuite/com.chrystianvieyra.physicstoolboxsuite.MainKotlinActivity
+  - net.vieyrasoftware.physicstoolboxsuitepro/com.chrystianvieyra.physicstoolboxsuite.MainKotlinActivity
+
+casio_watches:
+  - com.casio.wac_app/com.casio.wac_app.MainActivity
+
+kazan_transport:
+  - ru.datapax.kazan/ru.avtopass.volga.ui.splash.SplashActivity
+
+wireguard:
+  - com.example.wireguard_flutter/com.example.wireguard_flutter.MainActivity
+
+droidvnc_ng:
+  - net.christianbeier.droidvnc_ng/net.christianbeier.droidvnc_ng.MainActivity
