--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -153,3 +153,18 @@ wireguard:
 
 droidvnc_ng:
   - net.christianbeier.droidvnc_ng/net.christianbeier.droidvnc_ng.MainActivity
+
+unobravo:
+  - com.unobravo.patient/com.unobravo.patient.MainActivity
+
+mayo_clinic:
+  - com.mayoclinic.patient/edu.mayoclinic.mayoclinic.ui.splash.SplashActivity
+
+abanca:
+  - com.abanca.bancamovil.particulares/com.abanca.bancamovil.presentation.activities.StartActivity
+
+vaesttrafik:
+  - com.vaesttrafik.vaesttrafik/se.vasttrafik.togo.core.MainActivity
+
+obs_blade:
+  - com.kounex.obsBlade/com.kounex.obsBlade.MainActivity
