fix build errors

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -51,9 +51,6 @@ aurora_store:
 google_kids_space:
   - com.google.android.apps.kids.home/com.google.android.apps.kids.home.accountsetup.AccountSignInActivity
 
-jina_drawer:
-  - com.mobeedom.android.jinaFS/com.mobeedom.android.justinstalled.JinaMainActivity
-
 jina_drawer_alt_1: {}
 
 jina_sidebar:
@@ -114,8 +111,7 @@ anihyou:
 apkupdater:
   - com.apkupdater/com.apkupdater.ui.activity.MainActivity
 
-colors_ai:
-  - is.tsin.colors_ai.colors_ai/is.tsin.colors_ai.colors_ai.MainActivity
+colors_ai_alt_1: {}
 
 freepaint:
   - io.github.pastthepixels.freepaint/io.github.pastthepixels.freepaint.MainActivity
@@ -127,7 +123,7 @@ logfox:
   - com.f0x1d.logfox/com.f0x1d.logfox.ui.activity.MainActivity
 
 uci_cinema:
-  - it.creaweb.ucicinemas/it.creaweb.ucicinemas.SplashActivity}
+  - it.creaweb.ucicinemas/it.creaweb.ucicinemas.SplashActivity
 
 warpshare:
   - com.moseoridev.warpshare/org.mokee.warpshare.MainActivity
