Added Icons for Color Harmony, Color Picker, and NBE Mobile (#671)
* Add files via upload

* Update new_icons.yaml

* Add files via upload

* Update new_icons.yaml

---------

Co-authored-by: Evgeny <mail@hexed.pw>

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,11 @@
 #
 # new_icon_2_alt_1: {}
 #
+color_harmony:
+  - pl.powsty.colorharmony/pl.powsty.colorharmony.SplashScreenActivity
+
+color_picker:
+  - gmikhail.colorpicker/gmikhail.colorpicker.activities/MainActivity
+
+nbe_mobile:
+  - com.ofss.obdx.and.nbe.com.eg/com.ofss.digx.mobile.android.SplashActivity
