--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -16,3 +16,9 @@ color_picker:
 
 nbe_mobile:
   - com.ofss.obdx.and.nbe.com.eg/com.ofss.digx.mobile.android.SplashActivity
+
+terminal:
+  - com.termux.tasker/com.termux.tasker.activities.TermuxTaskerActivity
+
+sbi_card:
+  - com.sbi.upi/com.sbi.upi.customerMode.modules.initial.splash.SplashActivity
