--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -22,3 +22,22 @@ terminal:
 
 sbi_card:
   - com.sbi.upi/com.sbi.upi.customerMode.modules.initial.splash.SplashActivity
+
+anilist: {}
+
+cryptee: {}
+
+accor_all:
+ - com.accor.appli.hybrid/com.accor.app.splashscreen.view.SplashScreenActivity
+
+breadfast:
+ - com.breadfast/com.breadfast.MainActivity
+
+good_search:
+ - com.sst.gexsi/com.sst.gexsi.App
+
+opay:
+ - team.opay.pay.egypt/team.opay.pay.egypt.module.home.EgyptSplashScreen
+
+paymob:
+ - com.paymob.paymob_app/com.paymob.merchant.ui.splash.SplashActivity
