--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -22,3 +22,6 @@ terminal:
 
 sbi_card:
   - com.sbi.upi/com.sbi.upi.customerMode.modules.initial.splash.SplashActivity
+
+neuron:
+  - com.hhyu.neuron/com.neuron.business.ui.account.login.UnregisteredHomeActivity
