--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -25,3 +25,18 @@ sbi_card:
 
 neuron:
   - com.hhyu.neuron/com.neuron.business.ui.account.login.UnregisteredHomeActivity
+
+wikicamps_australia:
+  - au.com.angryrobot.wikicamps/crc64fdee16fa4a3fada4.SplashActivity
+
+wikicamps_canada:
+  - au.com.angryrobot.wikicampsca/crc64fdee16fa4a3fada4.SplashActivity
+
+wikicamps_nz:
+  - au.com.angryrobot.wikicampsnz/crc64fdee16fa4a3fada4.SplashActivity
+
+wikicamps_uk:
+  - au.com.angryrobot.wikicampsuk/crc64fdee16fa4a3fada4.SplashActivity
+
+wikicamps_usa:
+  - au.com.angryrobot.wikicampsusa/crc64fdee16fa4a3fada4.SplashActivity
