Add Oppo's Cloud Service app

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -40,3 +40,6 @@ wikicamps_uk:
 
 wikicamps_usa:
   - au.com.angryrobot.wikicampsusa/crc64fdee16fa4a3fada4.SplashActivity
+
+cloud_service:
+  - com.heytap.cloud/com.heytap.cloud.home.ui.CloudLauncherActivity
