--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -22,3 +22,36 @@ terminal:
 
 sbi_card:
   - com.sbi.upi/com.sbi.upi.customerMode.modules.initial.splash.SplashActivity
+
+alltrans:
+  - akhil.alltrans/akhil.alltrans.MainActivity
+
+bcr_gui:
+  - com.github.nicorac.bcrgui/com.github.nicorac.bcrgui.MainActivity
+
+brainf:
+  - com.fredhappyface.brainf/com.fredhappyface.brainf.ActivityMain
+
+dia:
+  - dialog.box/dialog.box.alias
+
+geergit:
+  - com.pyshivam.geergit/com.pyshivam.geergit.MainActivity
+
+inspeckage:
+  - mobi.acpm.inspeckage/mobi.acpm.inspeckage.ui.SplashActivity
+
+justnotes:
+  - com.jjewuz.justnotes/com.jjewuz.justnotes.MainActivity
+
+musekit:
+  - com.kwasow.musekit/com.kwasow.musekit.MainActivity
+
+quotelockx:
+  - com.yubyf.quotelockx/com.crossbowffs.quotelock.app.main.MainActivity
+
+wallflow:
+  - com.ammar.wallflow/com.ammar.wallflow.activities.main.MainActivity
+
+nagram:
+  - xyz.nextalone.nnngram/org.telegram.messenger.DefaultIcon
