--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -91,3 +91,15 @@ opay:
 
 paymob:
  - com.paymob.paymob_app/com.paymob.merchant.ui.splash.SplashActivity
+
+ox_shell:
+ - com.OxGames.OxShelll.free/com.OxGames.OxShell.HomeActivity
+
+abattery:
+ - me.linshen.abattery/me.linshen.abattery.MainActivity
+
+capacities:
+ - io.capacities.mobile/io.capacities.mobile.MainActivity
+
+innbucks:
+ - com.innbucks.customer/com.innbucks.customer.ui.entrance.StartUpSplashActivity
