--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -55,7 +55,7 @@ wallflow:
 
 nagram:
   - xyz.nextalone.nnngram/org.telegram.messenger.DefaultIcon
-  
+
 neuron:
   - com.hhyu.neuron/com.neuron.business.ui.account.login.UnregisteredHomeActivity
 
@@ -81,13 +81,26 @@ accor_all:
  - com.accor.appli.hybrid/com.accor.app.splashscreen.view.SplashScreenActivity
 
 breadfast:
- - com.breadfast/com.breadfast.MainActivity
+  - com.breadfast/com.breadfast.MainActivity
 
 good_search:
- - com.sst.gexsi/com.sst.gexsi.App
+  - com.sst.gexsi/com.sst.gexsi.App
 
 opay:
- - team.opay.pay.egypt/team.opay.pay.egypt.module.home.EgyptSplashScreen
+  - team.opay.pay.egypt/team.opay.pay.egypt.module.home.EgyptSplashScreen
 
 paymob:
- - com.paymob.paymob_app/com.paymob.merchant.ui.splash.SplashActivity
+  - com.paymob.paymob_app/com.paymob.merchant.ui.splash.SplashActivity
+
+ox_shell:
+  - com.OxGames.OxShell.free/com.OxGames.OxShell.HomeActivity
+  - com.OxGames.OxShell/com.OxGames.OxShell.HomeActivity
+
+abattery:
+  - me.linshen.abattery/me.linshen.abattery.MainActivity
+
+capacities:
+  - io.capacities.mobile/io.capacities.mobile.MainActivity
+
+innbucks:
+  - com.innbucks.customer/com.innbucks.customer.ui.entrance.StartUpSplashActivity
