new 13 icons, 1 compinfo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -104,3 +104,45 @@ capacities:
 
 innbucks:
   - com.innbucks.customer/com.innbucks.customer.ui.entrance.StartUpSplashActivity
+
+sprinti:
+  - hannover.rider/via.rider.features.splash.SplashActivityKt
+
+nebulous_io:
+  - software.simplicial.nebulous/software.simplicial.nebulous.application.MainActivity
+
+salesforce:
+  - com.salesforce.chatter/com.salesforce.chatter.Chatter
+
+meralco:
+  - com.meralco.phone.move/com.salesforce.androidsdk.phonegap.ui.SalesforceDroidGapActivity
+
+paysera:
+  - lt.lemonlabs.android.paysera/com.paysera.LaunchScreenActivity
+
+salatku:
+  - com.kodelokus.prayertime/com.kodelokus.prayertime.scene.home.view.HomeActivity
+
+green_got:
+  - com.greengot/com.greengot.MainActivity
+
+match_land:
+  - com.racecat.fantasy/com.prime31.UnityPlayerNativeActivity
+
+cards_universe_everything:
+  - com.avid.cue/com.unity3d.player.UnityPlayerActivity
+
+wordup:
+  - co.wordupapp.app/crc646f45dd7a1b6aab56.SplashScreen
+
+livelo:
+  - br.com.livelo.app/br.com.livelo.app.MainActivity
+
+kajabi:
+  - kajabi.kajabiapp/kajabi.kajabiapp.activities.LaunchActivity
+
+peglin:
+  - com.RedNexusGamesInc.Peglin/com.unity3d.player.UnityPlayerActivity
+
+lemur_browser:
+  - com.lemurbrowser.exts/com.google.android.apps.chrome.Main
